appId: ${APP_ID}
tags:
  - util
---
- assertVisible: 'Grant this App access to Health data'
- tapOn: 'Grant this App access to Health data'
- assertVisible: 'Character'
